<resources>
    <string name="app_name">PhoneStore2</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ecommerce_nconcept">ecommerce\nconcept</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_category">Select Category</string>
    <string name="zihuatanejo_gro">Zihuatanejo, Gro ↓</string>
    <string name="view_all">view all</string>
    <string name="see_more">see more</string>
    <string name="hot_sales">Hot sales</string>
    <string name="search">Search</string>
    <string name="books">Books</string>
    <string name="health">Health</string>
    <string name="computer">Computer</string>
    <string name="phones">Phones</string>
    <string name="todo">TODO</string>
    <string name="textnews">New</string>
    <string name="iphone12">Iphone12</string>
    <string name="super_mega_rapido">Super.Mega.Rapido.</string>
    <string name="buy_now">Buy now!</string>
    <string name="best_sellet">Best Sellet</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_yet_registered_signup">Not yet registered? Signup</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_an_user_login">Already an user? Login</string>
    <string name="price">price</string>
    <string name="infophone">infoPhone</string>

    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="ef">TODO</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
    <string name="sign_in">Sign In</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="type_your_email">Type your Email</string>
</resources>