<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgraund"
    tools:context=".pages.BooksActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/groTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zihuatanejo_gro"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_category"
            android:textColor="@color/textColor"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/groTextView"
            android:layout_marginTop="18dp"
            android:layout_marginStart="18dp"/>

        <TextView
            android:id="@+id/viewAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            android:textSize="15sp"
            android:textColor="@color/orangeColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/category"
            app:layout_constraintTop_toBottomOf="@id/groTextView"
            android:layout_marginTop="26dp"
            android:layout_marginStart="120dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/category"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearFirst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="6dp"
                tools:ignore="MissingConstraints">

                <ImageButton
                    android:id="@+id/phoneButton"
                    android:layout_width="68dp"
                    android:layout_height="68dp"
                    android:layout_marginHorizontal="12dp"
                    android:background="@drawable/screensecond"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/group" />

                <ImageButton
                    android:id="@+id/buttonComputer"
                    android:layout_width="68dp"
                    android:layout_height="68dp"
                    android:layout_marginHorizontal="12dp"
                    android:background="@drawable/screensecond"
                    android:src="@drawable/computer"
                    android:contentDescription="@string/todo" />

                <ImageButton
                    android:id="@+id/buttonHealth"
                    android:layout_width="68dp"
                    android:layout_height="68dp"
                    android:layout_marginHorizontal="12dp"
                    android:src="@drawable/health"
                    android:background="@drawable/screensecond"
                    android:contentDescription="@string/todo" />

                <ImageButton
                    android:id="@+id/buttonBook"
                    android:layout_width="68dp"
                    android:layout_height="68dp"
                    android:layout_marginHorizontal="12dp"
                    android:src="@drawable/book"
                    android:background="@drawable/screen"
                    android:contentDescription="@string/todo" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linerTexts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="6dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearFirst">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phones"
                    android:textSize="12sp"
                    android:textColor="@color/textColor"
                    android:layout_marginHorizontal="25dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/computer"
                    android:textSize="12sp"
                    android:textColor="@color/textColor"
                    android:layout_marginHorizontal="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/health"
                    android:textSize="12sp"
                    android:textColor="@color/textColor"
                    android:layout_marginHorizontal="25dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/books"
                    android:textSize="12sp"
                    android:textColor="@color/orangeColor"
                    android:layout_marginHorizontal="30dp"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/search"
            android:layout_width="300dp"
            android:layout_height="42dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="16dp"
            android:hint="@string/search"
            android:paddingStart="12dp"
            android:background="@drawable/screensecond"
            app:layout_constraintEnd_toStartOf="@id/qrCode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerA"
            android:importantForAutofill="no"
            tools:ignore="RtlSymmetry"
            android:inputType="text" />

        <ImageButton
            android:id="@+id/qrCode"
            android:layout_width="41dp"
            android:layout_height="41dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/screen"
            android:src="@drawable/ic_qr_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/search"
            app:layout_constraintTop_toBottomOf="@id/containerA"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/sales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hot_sales"
            android:textColor="@color/textColor"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search"
            android:layout_marginTop="24dp"
            android:layout_marginStart="17dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_more"
            android:textColor="@color/orangeColor"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search"
            android:layout_marginTop="31dp"
            android:layout_marginEnd="12dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="350dp"
            android:layout_height="182dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sales"
            android:layout_marginTop="8dp"
            android:background="@drawable/iphone">

            <ImageView
                android:id="@+id/imageReclam"
                android:layout_width="384dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/iphone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sales"
                android:contentDescription="@string/todo" />

            <ImageButton
                android:id="@+id/imageNew"
                android:layout_width="31dp"
                android:layout_height="31dp"
                android:background="@drawable/screen"
                android:layout_marginStart="32dp"
                android:layout_marginTop="23dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="20dp"
                android:layout_height="12dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="36dp"
                android:text="@string/textnews"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:ignore="SmallSp" />

            <TextView
                android:layout_width="109dp"
                android:layout_height="30dp"
                android:text="@string/iphone12"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:layout_marginStart="32dp"
                android:layout_marginTop="68dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:textColor="@color/white"
                android:textStyle="normal"
                android:text="@string/super_mega_rapido"
                android:layout_marginTop="103dp"
                android:layout_marginStart="32dp"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="98dp"
                android:layout_height="32dp"
                android:layout_marginTop="136dp"
                android:layout_marginStart="32dp"
                android:text="@string/buy_now"
                android:textSize="9sp"
                android:textColor="@color/black"
                android:background="@drawable/editbackgraund"
                tools:ignore="SmallSp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/bestSeller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            android:textSize="25sp"
            android:textColor="@color/textColor"
            android:text="@string/best_sellet"
            android:layout_marginStart="17dp"
            android:layout_marginTop="3dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recicleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bestSeller"
            app:spanCount="2"
            tools:listitem="@layout/item_img" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


