<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imgFirst"
        android:layout_width="187dp"
        android:background="@drawable/img"
        android:layout_height="168dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="14dp"
        android:layout_marginTop="21dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="74dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/price"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgFirst" />

    <TextView
        android:id="@+id/tvInfoPhone"
        android:layout_width="122dp"
        android:layout_height="13dp"
        android:textSize="10sp"
        android:minLines="1"
        android:text="@string/infophone"
        android:textColor="@color/textColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPrice"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>