<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auth_back"
    tools:context=".auth.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="430dp"
                android:padding="20dp">

                <EditText
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:id="@+id/login_email"
                    android:layout_marginTop="30dp"
                    android:padding="8dp"
                    android:background="@drawable/cornenrs"
                    android:hint="@string/email"
                    android:drawablePadding="8dp"
                    android:textColor="@color/grey"
                    android:inputType="textEmailAddress"
                    android:autofillHints="emailAddress" />

                <EditText
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:id="@+id/login_password"
                    android:layout_marginTop="20dp"
                    android:padding="8dp"
                    android:background="@drawable/cornenrs"
                    android:hint="@string/password"
                    android:drawablePadding="8dp"
                    android:textColor="@color/grey"
                    android:inputType="textPassword"
                    android:autofillHints="password" />

                <Button
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/login"
                    android:id="@+id/login_button"
                    android:textSize="18sp"
                    app:cornerRadius = "30dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/forgot_password"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:padding="8dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/lavender"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/signupRedirectText"
                    android:text="@string/not_yet_registered_signup"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:layout_marginTop="14dp"
                    android:textSize="18sp"
                    android:textColor="@color/lavender"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>